--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,10 @@
     --clr-blue:193 65% 24%;
     --clr-yellow: 43 100% 62%;
     /* fontsizes */
-    --fs-800: 6.25rem;
+    --fs-800: 8vw;
     --fs-700: 3.5rem;
-    --fs-600: 2rem;
-    --fs-500: 1.7rem;
+    --fs-600: 4vw;
+    --fs-500: 2.2vw;
     --fs-400: 1.25rem;
 
     /* font-families */
@@ -91,8 +91,6 @@ input, button{
     grid-template-columns: repeat(2, 1fr);
 
 }
-
-
 .container {
     padding-inline: 1em;
     max-width: 70rem;
@@ -125,8 +123,6 @@ input, button{
 .ff-sans-cond { font-family: var(--ff-sans-cond); } 
 .ff-sans-normal { font-family: var(--ff-sans-normal); } 
 
-.letter-spacing-1 { letter-spacing: 4.75px; } 
-.letter-spacing-2 { letter-spacing: 2.7px; } 
 .letter-spacing-3 { letter-spacing: 2.35px; } 
 
 .uppercase { text-transform: uppercase; }
@@ -135,7 +131,6 @@ input, button{
 .fs-700 { font-size: var(--fs-700); }
 .fs-500 { font-size: var(--fs-500); }
 
-.fs-800,
 .fs-700,
 .fs-600 {
     line-height: 1.5;
@@ -146,7 +141,7 @@ input, button{
     font-family: var(--ff-sans-cond);
     font-size: var(--fs-500);
     text-transform: uppercase;
-    letter-spacing: 4.72px;
+    letter-spacing: .1em;
 
 }
 
@@ -201,7 +196,7 @@ input, button{
 
 .primary-navigation {
     position: fixed;
-    --gap: 8rem;
+    --gap: 12vw;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -237,8 +232,8 @@ input, button{
 }
 
 .main{
-    margin-top: 7em;
     aspect-ratio: 1;
+    max-height: 60%;
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
     
 }
